# Raspirus

./: .all-contributorsrc  .dockerignore  .eslintrc.json  .gitignore  .pylintrc  .tokeignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  DOCUMENTING.md  Dockerfile  Executer.cpp  File.cpp  Main.cpp  Makefile  Packager.toml  RASPBERRY_INSTALLATION.md  README.md  Trunk.toml  changes.temp  changes.temp.md  codecov.yml  deps  dimensions.txt  i18n.json  index.html  launch.json  links.txt  main.py  next-i18next.config.js  next.config.js  notes.txt  package-lock.json  package.json  pyproject.toml  renovate.json  requirements.txt  requirements_dev.txt  setup.cfg  snapcraft.yaml  (+5 more)
.cargo/: Config.toml  config.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: arm-release.yml  codecov.yml  coverage.yml  cross-compile.yml  cross-compiler.yml  discord.yml  docker-image.yml  documentation.yml  eslint.yml  linescounter.yml  merged.yml  njsscan.yml  pylint.yml  python-app.yml  rasp-runner.yml  release.yml  rust-clippy.yml  rust-tests.yml  rust.yml  singlething.yml  snapbuild.yml  tauri.yml  tauritest.yml  testproject.yml  tests.yml
Diagramme/: .$MaturaBOM.drawio.bkp  MaturaAktivitaet.drawio  MaturaBOM.drawio  MaturaUseCase.drawio
app/: next.config.js  package-lock.json  package.json
app/components/: settings-comp.js  virus-comp.js
app/pages/: _app.js  _document.js  clean.js  index.js  infected.js  loading.js  settings.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
backend/: File.py  FileScanner.py  HashAPI.py  file_module.py  file_scanner_module.py  hash_api_module.py  main.py
class/: File.cpp  FileRetriever.cpp  FileScanner.cpp  HashUpdaterAPI.cpp
components/: DirectoryInput.js  DirectoryPickerButton.js  DriverDropdown.js  FlagIcon.js  IgnoredHashes.js  InformationCard.js  LanguagePicker.js  LanguageSwitchLink.js  Link.js  SettingsCard.js  TimePicker.js  VirusCard.js  WeekdaySelector.js  alert.jsx  dir-input.js  dir-picker.js  dropdown-comp.js  info-comp.js  lang-picker.js  settings-comp.js  time-picker.js  virus-comp.js
docker/amd/: Dockerfile
docker/arm/: Dockerfile
docker/armhf/: Dockerfile
docker/binary/: Dockerfile
docs/: FAQ.md  INSTALLATION.md  RASPBERRY_INSTALLATION.md  notes.md
frontend/: MainWindow.py  RaspGUI.pyproject  main.py  utility.py
frontend/RaspGUI/: RaspGUI.pyproject  main.py
frontend/modals/: virusPageDialog.qml
frontend/pages/: ClearPage.py  InfoPage.py  LoadingPage.py  MainPage.py  SettingsLogPage.py  SettingsPage.py  VirusPage.py
frontend/popups/: DoubleButtonDialog.py  SingleButtonDialog.py
frontend/qml/: view.qml
frontend/views/: cleanPage.qml  infoPage.qml  loading.qml  main.qml  settings.qml  view.qml  virusPage.qml
lib/: getStatic.js  languageDetector.js  redirect.js
locales/en/: common.json
locales/it/: common.json
meta-raspirus/conf/: layer.conf  local.conf
meta-raspirus/recipes-raspirus/raspirus/: raspirus.bb
pages/: _app.js  _app.tsx  _document.js  _document.tsx  clean.js  clean.tsx  index.js  index.tsx  infected.js  info.js  info.tsx  loading.js  loading.tsx  permission.js  settings.js  settings.tsx
pages/[locale]/: clean.js  index.js  infected.js  info.js  loading.js  permission.js  settings.js
public/locales/: de.json  en.json  it.json
public/locales/de/: common.json
public/locales/en/: common.json
public/locales/it/: common.json
services/: getConfigSettings.js  useLocalStorage.js
snap/: snapcraft.yaml
snap/gui/: raspirus.desktop
src/: generic.rs  main.rs
src-tauri/: Cargo.toml  signatures.db  sond  tauri.conf.json
src-tauri/benches/: raspirus_bench.rs
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  temporary.rs
src-tauri/src/backend/: config_file.rs  db_ops.rs  downloader.rs  file_log.rs  file_scanner.rs  mod.rs  scanner.rs  yara_scanner.rs
src-tauri/src/backend/utils/: generic.rs  mod.rs  scanner_utils.rs  update_utils.rs  usb_utils.rs
src-tauri/src/frontend/: functions.rs  main.rs  mod.rs  tauri.rs
src-tauri/src/tests/: config_file_test.rs  db_ops_test.rs  file_log_test.rs  file_scanner_test.rs  mod.rs
src-ui/: Cargo.toml  index.html  input.css
src-ui/src/: main.rs
src-ui/src/pages/: app.rs  clean.rs  index.rs  settings.rs
src-ui/styles/: langpicker.module.css
src/Raspirus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/assets/locales/: de.json  en.json  fr.json  it.json
src/backend/: config_file.rs  database_operations.rs  database_sql.rs  downloader.rs  file_log.rs  file_scanner.rs  mod.rs  prepare.rs  sql.rs  yara_scanner.rs
src/backend/utils/: generic.rs  mod.rs  usb_utils.rs
src/components/: directory_picker_button.rs  flag_icon.rs  home_button.rs  info_card.rs  language_switch.rs  mod.rs  settings_card.rs  settings_card_download.rs  settings_card_input.rs  settings_card_numinput.rs  settings_card_patch.rs  settings_card_toggle.rs  settings_card_update.rs  skipped_card.rs  virus_card.rs
src/components/modals/: error_modal.rs  mod.rs  success_modal.rs  update_modal.rs  welcome_modal.rs
src/frontend/: clear_page.rs  functions.rs  iced.rs  info_page.rs  loading_page.rs  main_page.rs  mod.rs  settings_page.rs  tauri.rs  test_page.rs  virus_page.rs
src/frontend/panels/: information.rs  loading.rs  main_menu.rs  mod.rs  results.rs  scanning.rs  settings.rs  terms.rs
src/frontend/theme/: button.rs  container.rs  icon.rs  mod.rs  svg.rs  (+2 more)
src/pages/: agreement.rs  app.rs  clean.rs  index.rs  infected.rs  information.rs  loading.rs  mod.rs  scanning.rs  settings.rs  updating.rs
src/raspirus/: main.py
src/tests/: config_file_test.rs  file_log_test.rs  file_scanner_test.rs  mod.rs  test.rs
styles/: animation.module.css  flags.css  globals.css  input.css  langpicker.module.css  main.css  main.scss  main_page.module.css  output.css  refresh.module.css  tailwind.css  w3.css
testing/files/: dummy1.txt
tests/: HashTest.cpp  conftest.py  test_backend.py  test_database_api.py  test_filescanner.py
webdriver/webdriverio/: package.json  wdio.conf.js
(+22 files in other folders)
