[package]
name = "raspirus-ui"
version = "1.2.1"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptonic = { git = "https://github.com/lpotthast/leptonic", features = ["csr"] }
leptos = { version = "0.6.12", features = ["csr"] }
leptos_router = { version = "0.6.12", features = ["csr"] }
leptos_i18n = "0.3.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
#serde-wasm-bindgen = "0.6.5"
#wasm-bindgen = "0.2.92"
#wasm-bindgen-futures = "0.4.42"
#js-sys = "0.3.69"
#log = "0.4.22"

tauri-wasm = { git = "https://github.com/Benji377/tauri-wasm", features = ["dialog", "core", "event"] }
futures-util = "0.3.30"
uuid = { version = "1.10.0", features = ["v4"] }
time = { version = "0.3.36", features = [
    "wasm-bindgen",
    "macros",
    "serde",
    "serde-well-known",
] }
chrono = "0.4.38"

[package.metadata.leptonic]
# REQUIRED: Leptonic's build-script will copy the Leptonic themes to this directory.
style-dir = "styles"
# REQUIRED: Leptonic's build-script will copy static JS dependencies to this directory.
js-dir = "public/js"

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "de", "it"]
locales-dir = "public/locales"

[workspace]
members = ["src-tauri"]

[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
