[package]
name = "raspirus"
version = "1.2.1"
description = "A simple hash-based virus-scanner"
authors = ["Demetz Benjamin, Hell Björn Felix"]
license = "GPLv3"
repository = "https://github.com/Raspirus/Raspirus"
default-run = "raspirus"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# generic dependencies
[dependencies]
threadpool_rs = { git = "https://github.com/GamingGuy003/threadpool_rs.git", features = ["log"] }
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
chrono = "0.4.38"
directories-next = "2.0.0"
simplelog = "0.12.2"
lazy_static = "1.5.0"
yara-x = "0.6.0"
num_cpus = "1.16.0"
sha2 = "0.10.8"
hex = "0.4.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
iced = { version = "0.12.1", features = ["tokio"] }
iced_aw = { version = "0.9.3", features = ["icons"] }
native-dialog = "0.7.0"
futures = "0.3.30"
iced_winit = "0.12.2"
winit = "0.30.5"

# usb detection on linux
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
lfs-core = "0.11.2"

# windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }
winapi = "0.3.9"
