[package]
name = "raspirus"
version = "1.2.2"
description = "A simple hash-based virus-scanner"
authors = ["Demetz Benjamin, Hell Björn Felix"]
license = "GPLv3"
repository = "https://github.com/Raspirus/Raspirus"
default-run = "raspirus"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# generic dependencies
[dependencies]
threadpool_rs = { git = "https://github.com/GamingGuy003/threadpool_rs.git", features = [
    "log",
] }
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
chrono = "0.4.38"
directories-next = "2.0.0"
simplelog = "0.12.2"
lazy_static = "1.5.0"
yara-x = "0.8.0"
num_cpus = "1.16.0"
sha2 = "0.10.8"
hex = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
iced = { version = "0.13.1", features = ["tokio", "image", "svg"] }
iced_aw = "0.11.0"
native-dialog = "0.7.0"
futures = "0.3.30"
open = "5.3.0"
printpdf = "0.7.0"
zip = "2.2.0"
iced_fonts = { version = "0.1.1", features = ["bootstrap"] }
tokio = "1.40.0"
rust-i18n = { version = "3.1.2", features = ["log-miss-tr"] }

# usb detection on linux
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
lfs-core = "0.11.2"

# windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }
winapi = "0.3.9"


[package.metadata.packager]
product-name = "Raspirus"
identifier = "com.raspirus.app"
category = "Utility"
homepage = "https://raspirus.deno.dev"
icons = ["src/assets/logo.png"]
licenseFile = "LICENSE"
formats = ["all"]
before-packaging-command = "cargo build --release"
# cargo packager --release --verbose --config '{\"beforePackagingCommand\": \"cargo check\"}'
