[metadata]
name = Raspirus
description = Scans harddrive on single board computers
author = Benjamin Demetz
license = None
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    raspirus
install_requires =
    Pillow>=9.3
    python-dotenv>=0.21
    wget>=3.2
    path>=16.6
    setuptools>=65.5
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
raspirus = py.typed

[flake8]
max-line-length = 160