[package]
name = "raspirus"
version = "1.1.1"
description = "A simple hash-based virus-scanner"
authors = ["Demetz Benjamin, Hell Björn Felix"]
license = "GPLv3"
repository = "https://github.com/Raspirus/Raspirus"
default-run = "raspirus"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool_rs = { git = "https://github.com/GamingGuy003/threadpool_rs.git"}
log = "0.4.20"
winapi = "0.3.9"
sysinfo = "0.30.5"
reqwest = { version = "0.11.24", features = [ "blocking" ] }
rusqlite = { version = "0.31.0", features =  [ "bundled" ] }
terminal_size = "0.3.0"
tokio = "1.36.0"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = [ "derive" ] }
tauri = { version = "1.6.0", features = [ "cli", "dialog-open", "updater" ] }
chrono = "0.4.34"
directories-next = "2.0.0"
zip = "0.6.6"
simplelog = "0.12.1"
job_scheduler_ng = "2.0.4"
windows-sys = { version = "0.52.0", features = [ "Win32_Foundation", "Win32_System_Console" ] }
md5 = "0.7.0"

[dev-dependencies]
ctor = "0.2.6"
regex = "1.10.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = "1.5.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
