[package]
name = "raspirus"
version = "1.1.3"
description = "A simple hash-based virus-scanner"
authors = ["Demetz Benjamin, Hell Björn Felix"]
license = "GPLv3"
repository = "https://github.com/Raspirus/Raspirus"
default-run = "raspirus"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# generic dependencies
[dependencies]
threadpool_rs = { git = "https://github.com/GamingGuy003/threadpool_rs.git"}
log = "0.4.21"
sysinfo = "0.30.11"
reqwest = { version = "0.12.3", features = [ "blocking" ] }
rusqlite = { version = "0.31.0", features =  [ "bundled" ] }
terminal_size = "0.3.0"
tokio = "1.37.0"
serde_json = "1.0.116"
serde = { version = "1.0.198", features = [ "derive" ] }
tauri = { version = "1.6.1", features = [ "cli", "dialog-open", "updater" ] }
chrono = "0.4.38"
directories-next = "2.0.0"
zip = "0.6.6"
simplelog = "0.12.2"
job_scheduler_ng = "2.0.4"
md5 = "0.7.0"

# windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52.0", features = [ "Win32_Foundation", "Win32_System_Console" ] }
winapi = "0.3.9"
tauri-cli = "1.5.11"

[dev-dependencies]
ctor = "0.2.8"
regex = "1.10.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
